# FastAPI-Atom-Chat

./: .dev.env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
server/: .dev.env.example  .dockerignore  .test.env.example  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2024_10_24_1017-9c37c4ef4f48_add_messages_table.py  2024_10_24_1140-259dd43c7120_add_messages_created_at_column.py  2024_10_25_2102-97074fd6ce09_add_user_is_blocked_and_user_is_deleted.py  2024_10_26_1235-bc237e3da451_add_chats_table.py  2024_10_30_0929-81a6352432f5_add_is_admin_column.py  2024_10_30_1737-93ed8d800b83_add_trigram_indexes.py  2024_10_31_2142-a1dde47d6d69_add_events_table.py  2024_11_01_1948-056d50aee7a3_add_events_added_user_id_column.py  2024_11_01_1950-2ae45f81bda7_change_datetime_format.py  2024_11_01_2026-2137e50741e0_rename_columns.py
server/src/: config.py  database.py  main.py  schemas.py  setup_app.py
server/src/auth/: config.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/chat/: dependencies.py  enums.py  manager.py  models.py  repostory.py  router.py  schemas.py  service.py
server/src/chats/: dependencies.py  exc_handlers.py  exceptions.py  manager.py  models.py  repository.py  router.py  schemas.py  service.py  sockets.py
server/src/events/: dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/messages/: dependencies.py  exc_handlers.py  exceptions.py  models.py  (+4 more)
server/tests/: conftest.py
(+63 files in other folders)
